--- a/src/about.html
+++ b/src/about.html
@@ -20,11 +20,11 @@
       <div class="trainer-bigtitle__wrapper">
         <img class="trainer-bigtitle__img" src="img/about/about-us_trainer.jpg" alt="trainer-img">
         <div class="trainer-bigtitle__info">
-          <h2 class="trainer-bigtitle__title">Lorem ipsum dolorsit!</h2>
-          <p class="trainer-bigtitle__subtitle">Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+          <h2 class="trainer-bigtitle__title">Мы — увлеченная команда профессионалов</h2>
+          <p class="trainer-bigtitle__subtitle">Мы предлагаем полный набор услуг высокого качества по доступной цене. Отличительная особенность нашего клуба четкое и рациональное зонирование помещений, современные и безопасные тренажеры, большой выбор групповых программ, квалифицированные тренеры, персональный подход к каждому клиенту.</p>
           <p class="trainer-bigtitle__name">
-            John Wolf - 
-            <span>GYMSport Responsabile</span>
+            Джон Вольф
+            <span>- Куратор GYMSport</span>
           </p>
         </div>
       </div>
@@ -33,15 +33,15 @@
   <section class="our-trainers">
     <div class="container">
       <div class="our-trainers__wrapper">
-        <h2 class="our-trainers__title">Our Trainers</h2>
+        <h2 class="our-trainers__title">Наши тренеры</h2>
         <div class="our-trainers__blocks">
           <div class="our-trainers__block">
             <div class="our-trainers__trainer">
-              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
-              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <img class="trainers__img" src="img/small/john.jpg" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">Джон Джонс</p>
+              <p class="trainers__spec our-trainers__spec">Кик Боксинг</p>
               <p class="trainers__info our-trainers__info">
-                Creating the perfect body is no small matter.
+                Он же папа, мама, бабушка и дедушка
               </p>
               <div class="trainers__icons">
                 <svg class="trainers__icon trainers__icon-like">
@@ -64,19 +64,19 @@
             </div>
             <hr class="our-trainers__divide">
             <div class="our-trainers__text">
-              <p class="our-trainers__quals">Qualifications</p>
-              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
-              <p class="our-trainers__speciality">Speciality</p>
-              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+              <p class="our-trainers__quals">Мастер спорта</p>
+              <p class="our-trainers__quals-text">Окончил государственный университет физической культуры и спорта. Сертифицированный тренер по бодибилдингу и фитнесу.</p>
+              <p class="our-trainers__speciality">Персональный тренер</p>
+              <p class="our-trainers__speciality-text">Развитие физических качеств, отработка техники и ударов, упор на выносливость и силу.</p>
             </div>
           </div>
           <div class="our-trainers__block our-trainers__block--light">
             <div class="our-trainers__trainer">
-              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
-              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <img class="trainers__img" src="img/small/rebecca.png" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">Ребекка Смит</p>
+              <p class="trainers__spec our-trainers__spec">Спиннинг</p>
               <p class="trainers__info our-trainers__info">
-                Creating the perfect body is no small matter.
+                Тренер, который отдает вам всего себя
               </p>
               <div class="trainers__icons">
                 <svg class="trainers__icon trainers__icon-like">
@@ -99,19 +99,19 @@
             </div>
             <hr class="our-trainers__divide">
             <div class="our-trainers__text">
-              <p class="our-trainers__quals">Qualifications</p>
-              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
-              <p class="our-trainers__speciality">Speciality</p>
-              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+              <p class="our-trainers__quals">Мастер спорта</p>
+              <p class="our-trainers__quals-text">Окончила государственный университет физической культуры, спорта, молодёжи и туризма, специалист по физической культуре и спорту.</p>
+              <p class="our-trainers__speciality">Персональный и групповой тренер</p>
+              <p class="our-trainers__speciality-text">Групповые и персональные тренировки по спиннингу для детей и взрослых.</p>
             </div>
           </div>
           <div class="our-trainers__block">
             <div class="our-trainers__trainer">
-              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
-              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <img class="trainers__img" src="img/small/mark.jpg" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">Марк Шторм</p>
+              <p class="trainers__spec our-trainers__spec">Кроссфит</p>
               <p class="trainers__info our-trainers__info">
-                Creating the perfect body is no small matter.
+                Прокачаю вашу выносливость и силу
               </p>
               <div class="trainers__icons">
                 <svg class="trainers__icon trainers__icon-like">
@@ -134,19 +134,19 @@
             </div>
             <hr class="our-trainers__divide">
             <div class="our-trainers__text">
-              <p class="our-trainers__quals">Qualifications</p>
-              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
-              <p class="our-trainers__speciality">Speciality</p>
-              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+              <p class="our-trainers__quals">Мастер спорта</p>
+              <p class="our-trainers__quals-text">Окончил государственный университет, специалист по физической культуре. Сертифицированный тренер IFBB.</p>
+              <p class="our-trainers__speciality">Персональный тренер</p>
+              <p class="our-trainers__speciality-text">Персональный тренинг, направленный на набор мышечной массы, коррекцию фигуры, жиросжигание.</p>
             </div>
           </div>
           <div class="our-trainers__block our-trainers__block--light">
             <div class="our-trainers__trainer">
-              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
-              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <img class="trainers__img" src="img/small/dami.jpg" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">Дэми Мосс</p>
+              <p class="trainers__spec our-trainers__spec">Бокс</p>
               <p class="trainers__info our-trainers__info">
-                Creating the perfect body is no small matter.
+                Научу давать всем сдачи
               </p>
               <div class="trainers__icons">
                 <svg class="trainers__icon trainers__icon-like">
@@ -169,19 +169,19 @@
             </div>
             <hr class="our-trainers__divide">
             <div class="our-trainers__text">
-              <p class="our-trainers__quals">Qualifications</p>
-              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
-              <p class="our-trainers__speciality">Speciality</p>
-              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+              <p class="our-trainers__quals">Мастер спорта</p>
+              <p class="our-trainers__quals-text">Окончила государственный институт физической культуры и спорта, специалист по спорту (тренер).</p>
+              <p class="our-trainers__speciality">Персональный тренер</p>
+              <p class="our-trainers__speciality-text">Индивидуальные и групповые тренировки по Кик Боксингу. Направленость на выносливость и скорость.</p>
             </div>
           </div>
           <div class="our-trainers__block our-trainers__block">
             <div class="our-trainers__trainer">
-              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
-              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <img class="trainers__img" src="img/small/jack.jpg" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">Джэк Гудман</p>
+              <p class="trainers__spec our-trainers__spec">Кардио Фитнес</p>
               <p class="trainers__info our-trainers__info">
-                Creating the perfect body is no small matter.
+                Создаю идеальные тела для вас
               </p>
               <div class="trainers__icons">
                 <svg class="trainers__icon trainers__icon-like">
@@ -204,19 +204,19 @@
             </div>
             <hr class="our-trainers__divide">
             <div class="our-trainers__text">
-              <p class="our-trainers__quals">Qualifications</p>
-              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
-              <p class="our-trainers__speciality">Speciality</p>
-              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+              <p class="our-trainers__quals">Мастер спорта</p>
+              <p class="our-trainers__quals-text">Окончил курс обучения функциональному тренингу и Outdoor-тренировкам. Дипломированный консультант по питанию.</p>
+              <p class="our-trainers__speciality">Персональный тренер</p>
+              <p class="our-trainers__speciality-text">Персональный тренинг, направленный на коррекцию фигуры. Функциональные тренировки..</p>
             </div>
           </div>
           <div class="our-trainers__block our-trainers__block--light">
             <div class="our-trainers__trainer">
-              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
-              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
-              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <img class="trainers__img" src="img/small/jasmine.jpg" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">Жасмин Паттер</p>
+              <p class="trainers__spec our-trainers__spec">Аэробика</p>
               <p class="trainers__info our-trainers__info">
-                Creating the perfect body is no small matter.
+                Заряжаю своих учеников энергией
               </p>
               <div class="trainers__icons">
                 <svg class="trainers__icon trainers__icon-like">
@@ -239,10 +239,10 @@
             </div>
             <hr class="our-trainers__divide">
             <div class="our-trainers__text">
-              <p class="our-trainers__quals">Qualifications</p>
-              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
-              <p class="our-trainers__speciality">Speciality</p>
-              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+              <p class="our-trainers__quals">Мастер спорта</p>
+              <p class="our-trainers__quals-text">Окончила государственный университет физической культуры. Специальность: Аэробные виды спорта.</p>
+              <p class="our-trainers__speciality">Персональный тренер</p>
+              <p class="our-trainers__speciality-text">Функциональные тренировки, фитнес для беременных, подготовка к соревнованиям по фитнесу.</p>
             </div>
           </div>
         </div>
