--- a/src/_from-blog.html
+++ b/src/_from-blog.html
@@ -4,7 +4,7 @@
     </h2>
     <div class="from-blog__block">
         <div class="from-blog__event">
-            <img class="from-blog__img" src="img/small/trainer-man-1.jpg" alt="blog-event-img">
+            <img class="from-blog__img" src="img/small/dami.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
                     Тренер - это творческая личность. А творческая личность имеет право на ошибку.
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="from-blog__event">
-            <img class="from-blog__img" src="img/small/trainer-woman-1.jpg" alt="blog-event-img">
+            <img class="from-blog__img" src="img/small/mark.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
                     Тренер всегда будет оставаться в тени своих именитых учеников!
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="from-blog__event">
-            <img class="from-blog__img" src="img/small/trainer-man-2.jpg" alt="blog-event-img">
+            <img class="from-blog__img" src="img/small/rebecca.png" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
                     Когда говорят — «боксер от Бога», я утверждаю — «боксер от Тренера».
