--- a/src/_join.html
+++ b/src/_join.html
@@ -3,21 +3,21 @@
     <div class="join__wrapper">
       <div class="join__join">
         <div class="join__join-info">
-          <h3 class="join__join-title">WHY JOIN?</h3>
-          <p class="join__join-subtitle">This is an awesome subhead</p>
-          <p class="join__join-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+          <h3 class="join__join-title">Подпишитесь</h3>
+          <p class="join__join-subtitle">И будьте в курсе новинок фитнеса</p>
+          <p class="join__join-text">Стать здоровым и активным просто. Для этого достаточно приобрести абонемент фитнес-клуба GYM. Тем более, что на клубные карты действует система скидок.</p>
         </div>
-        <button class="join__join-btn">Join Today</button>
+        <button class="join__join-btn">Присоединиться</button>
       </div>
       <hr class="join__divide">
       <div class="join__member">
         <h3 class="join__member-title">
-          ALREADY A MEMBER?
+          Уже подписаны?
         </h3>
-        <p class="join__member-subtitle">This is an awesome subhead</p>
-        <p class="join__member-text">Maecenas mattis vitae tellus vel interdum. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
-        <a href="#" class="join__member-btn">Log In</a>
-        <a href="#" class="join__member-btn join__member-btn--calendar">View calendar</a>
+        <p class="join__member-subtitle">К услугам членов клуба:</p>
+        <p class="join__member-text">Тренажерный зал с тренажерами последнего поколения, банный комплекс для отдыха и спа-процедур</p>
+        <a href="#" class="join__member-btn">Войти</a>
+        <a href="timetable.html" class="join__member-btn join__member-btn--calendar">Расписание</a>
       </div>
     </div>
   </div>
