--- a/src/about.html
+++ b/src/about.html
@@ -257,14 +257,19 @@
           <use xlink:href="img/icons/icons.svg#right-quote-sign"></use>
         </svg>
       </div>
-      <p class="about-comment__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+      <p class="about-comment__text">Мы даем Вам только самую честную и выгодную цену на наши услуги. Действуют скидки на карты до 50%. Бесплатные месяцы и дни открытых дверей.</p>
       <p class="about-comment__name">
-        John White
-        <span>CEO - THEUNCREATIVELAB</span>
+        Дэниел Коуч
+        <span>- GYM директор</span>
       </p>
     </div>
   </section>
   @@include('_gallery-partner.html')
   @@include('_footer.html')
+
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
