--- a/src/classes.html
+++ b/src/classes.html
@@ -21,90 +21,91 @@
           <div class="class-block">
             <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
-              <h3 class="class-block__title">Kik Boxing</h3>
-              <p class="class-block__subtitle">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <h3 class="class-block__title">Кикбоксинг</h3>
+              <p class="class-block__subtitle">Кикбоксинг – это разновидность боевых искусств, где принято наносить удары и руками, и нижними конечностями.Этот вид спорта сочетает в себе восточные единоборства и классический бокс.</p>
               <div class="class-block__trainer">
-                <img src="img/small/trainer-woman-1.jpg" class="class-block__trainer-img">
-                <p class="class-block__spec">Trainer</p>
-                <p class="class-block__name">Victor Jones</p>
-                <p class="class-block__text">Creating the perfect body is no small matter.</p>
-                <a href="#" class="class-block__btn">Read More</a>
-                <a href="#" class="class-block__btn class-block__btn--second">Timetable</a>
+                <img src="img/small/john.jpg" class="class-block__trainer-img">
+                <p class="class-block__spec">Тренер</p>
+                <p class="class-block__name">Джон Джонс</p>
+                <p class="class-block__text">Он же папа, мама, бабушка и дедушка</p>
+                <a href="#" class="class-block__btn">Читать</a>
+                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
               </div>
             </div>
           </div>
           <div class="class-block class-block--light">
             <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
-              <h3 class="class-block__title">Kik Boxing</h3>
-              <p class="class-block__subtitle">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <h3 class="class-block__title">Спиннинг</h3>
+              <p class="class-block__subtitle">Cпининг — это ритмическое катание на тренажере-велосипеде в ритм музыки и в соответствии с  указаниями тренера.</p>
               <div class="class-block__trainer">
-                <img src="img/small/trainer-woman-1.jpg" class="class-block__trainer-img">
-                <p class="class-block__spec">Trainer</p>
-                <p class="class-block__name">Victor Jones</p>
-                <p class="class-block__text">Creating the perfect body is no small matter.</p>
-                <a href="#" class="class-block__btn">Read More</a>
-                <a href="#" class="class-block__btn class-block__btn--second">Timetable</a>
+                <img src="img/small/rebecca.png" class="class-block__trainer-img">
+                <p class="class-block__spec">Тренер</p>
+                <p class="class-block__name">Ребекка Смит</p>
+                <p class="class-block__text">Тренер, который отдает вам всего себя</p>
+                <a href="#" class="class-block__btn">Читать</a>
+                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
               </div>
             </div>
           </div>
           <div class="class-block">
             <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
-              <h3 class="class-block__title">Kik Boxing</h3>
-              <p class="class-block__subtitle">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <h3 class="class-block__title">Кроссфит</h3>
+              <p class="class-block__subtitle">Кроссфит – это вид функциональных тренировок, объединяющий в себе кардионагрузки, гимнастические и силовые упражнения.</p>
               <div class="class-block__trainer">
-                <img src="img/small/trainer-woman-1.jpg" class="class-block__trainer-img">
-                <p class="class-block__spec">Trainer</p>
-                <p class="class-block__name">Victor Jones</p>
-                <p class="class-block__text">Creating the perfect body is no small matter.</p>
-                <a href="#" class="class-block__btn">Read More</a>
-                <a href="#" class="class-block__btn class-block__btn--second">Timetable</a>
+                <img src="img/small/mark.jpg" class="class-block__trainer-img">
+                <p class="class-block__spec">Тренер</p>
+                <p class="class-block__name">Марк Шторм</p>
+                <p class="class-block__text">Прокачаю вашу выносливость и силу.</p>
+                <a href="#" class="class-block__btn">Читать</a>
+                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
               </div>
             </div>
           </div>
           <div class="class-block class-block--light">
             <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
-              <h3 class="class-block__title">Kik Boxing</h3>
-              <p class="class-block__subtitle">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <h3 class="class-block__title">Аэробика</h3>
+              <p class="class-block__subtitle">Аэробика – это активные, быстрые тренировки, особенно актуальные для тех, кто хочет быстро похудеть.</p>
               <div class="class-block__trainer">
-                <img src="img/small/trainer-woman-1.jpg" class="class-block__trainer-img">
-                <p class="class-block__spec">Trainer</p>
-                <p class="class-block__name">Victor Jones</p>
-                <p class="class-block__text">Creating the perfect body is no small matter.</p>
-                <a href="#" class="class-block__btn">Read More</a>
-                <a href="#" class="class-block__btn class-block__btn--second">Timetable</a>
+                <img src="img/small/jasmine.jpg" class="class-block__trainer-img">
+                <p class="class-block__spec">Тренер</p>
+                <p class="class-block__name">Жасмин Паттер</p>
+                <p class="class-block__text">Заряжаю своих учеников энергией
+                </p>
+                <a href="#" class="class-block__btn">Читать</a>
+                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
               </div>
             </div>
           </div>
           <div class="class-block">
             <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
-              <h3 class="class-block__title">Kik Boxing</h3>
-              <p class="class-block__subtitle">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <h3 class="class-block__title">Кардиофитнес</h3>
+              <p class="class-block__subtitle">Кардиофитнес– это комплекс упражнений, которые увеличивают сердечный ритм и усиливают циркуляцию крови по всему телу.</p>
               <div class="class-block__trainer">
-                <img src="img/small/trainer-woman-1.jpg" class="class-block__trainer-img">
-                <p class="class-block__spec">Trainer</p>
-                <p class="class-block__name">Victor Jones</p>
-                <p class="class-block__text">Creating the perfect body is no small matter.</p>
-                <a href="#" class="class-block__btn">Read More</a>
-                <a href="#" class="class-block__btn class-block__btn--second">Timetable</a>
+                <img src="img/small/jack.jpg" class="class-block__trainer-img">
+                <p class="class-block__spec">Тренер</p>
+                <p class="class-block__name">Джэк Гудман</p>
+                <p class="class-block__text">Помогаю создать идеальное тело</p>
+                <a href="#" class="class-block__btn">Читать</a>
+                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
               </div>
             </div>
           </div>
           <div class="class-block class-block--light">
             <img src="img/classes/class-1.jpg" alt="classes-block-img" class="class-block__img">
             <div class="class-block__info">
-              <h3 class="class-block__title">Kik Boxing</h3>
-              <p class="class-block__subtitle">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <h3 class="class-block__title">Бокс</h3>
+              <p class="class-block__subtitle"> Бокс – это олимпийский контактный вид спорта, в котором разрешены удары только кулаками и только в специальных перчатках.</p>
               <div class="class-block__trainer">
-                <img src="img/small/trainer-woman-1.jpg" class="class-block__trainer-img">
-                <p class="class-block__spec">Trainer</p>
-                <p class="class-block__name">Victor Jones</p>
-                <p class="class-block__text">Creating the perfect body is no small matter.</p>
-                <a href="#" class="class-block__btn">Read More</a>
-                <a href="#" class="class-block__btn class-block__btn--second">Timetable</a>
+                <img src="img/small/dami.jpg" class="class-block__trainer-img">
+                <p class="class-block__spec">Тренер</p>
+                <p class="class-block__name">Дэми Мосс</p>
+                <p class="class-block__text">Научу давать всем сдачи</p>
+                <a href="#" class="class-block__btn">Читать</a>
+                <a href="timetable.html" class="class-block__btn class-block__btn--second">Расписание</a>
               </div>
             </div>
           </div>
@@ -124,5 +125,10 @@
     @@include('_comment.html')
   </main>
   @@include('_footer.html')
+
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
