--- a/src/contact.html
+++ b/src/contact.html
@@ -143,5 +143,10 @@
     @@include('_comment.html')
   </main>
   @@include('_footer.html')
+
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
