--- a/src/timetable.html
+++ b/src/timetable.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css" />
 
@@ -24,148 +25,148 @@
           <nav class="table__nav">
             <ul class="table__navbar">
               <li class="table__nav-name">
-                ALL
+                Все
               </li>
               <li class="table__nav-name">
-                AEROBICS
+               Аэробика
               </li>
               <li class="table__nav-name">
-                CROSSFIT
+                Кроссфит
               </li>
               <li class="table__nav-name">
-                BOXING
+                Бокс
               </li>
               <li class="table__nav-name">
-                KIK BOXING
+                Кик Боксинг
               </li>
               <li class="table__nav-name">
-                PILATES
+                Пилатес
               </li>
               <li class="table__nav-name">
-                SPINNING
+                Спиннинг
               </li>
             </ul>
           </nav>
           <table class="main-table">
             <tr class="main-table__days">
               <th></th>
-              <th>Monday</th>
-              <th>TUESDAY</th>
-              <th>WEDNESDAY</th>
-              <th>THURSDAY</th>
-              <th>FRIDAY</th>
-              <th>SATURDAY</th>
-              <th>SUNDAY</th>
+              <th>Понедельник</th>
+              <th>Вторник</th>
+              <th>Среда</th>
+              <th>Четверг</th>
+              <th>Пятница</th>
+              <th>Суббота</th>
+              <th>Воскресенье</th>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">06:00 - 07:00</td>
-              <td>Aerobics - Room A</td>
-              <td>Pilates - Room D</td>
-              <td>Aerobics - Room A</td>
-              <td>Pilates - Room D</td>
-              <td>Aerobics - Room A</td>
+              <td>Аэробика - Зал A</td>
+              <td>Пилатес - Зал D</td>
+              <td>Аэробика - Зал A</td>
+              <td>Пилатес - Зал D</td>
+              <td>Аэробика - Зал A</td>
               <td></td>
               <td></td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">07:00 - 08:00</td>
-              <td>Kik Boxing - Room B</td>
-              <td>Crossfit - Room B</td>
+              <td>Кик Боксинг - Зал B</td>
+              <td>Кроссфит - Зал B</td>
               <td></td>
-              <td>Kik Boxing - Room B</td>
-              <td>Spinning- Room D</td>
-              <td>Crossfit - Room B</td>
-              <td>Kik Boxing - Room B</td>
+              <td>Кик Боксинг - Зал B</td>
+              <td>Спиннинг- Зал D</td>
+              <td>Кроссфит - Зал B</td>
+              <td>Кик Боксинг - Зал B</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">08:00 - 9:00</td>
-              <td>Boxing - Room C</td>
-              <td>Spinning- Room D</td>
-              <td>Boxing - Room C</td>
-              <td>Spinning- Room D</td>
+              <td>Бокс - Зал C</td>
+              <td>Спиннинг- Зал D</td>
+              <td>Бокс - Зал C</td>
+              <td>Спиннинг- Зал D</td>
               <td></td>
-              <td>Spinning- Room D</td>
-              <td>Boxing - Room C</td>
+              <td>Спиннинг- Зал D</td>
+              <td>Бокс - Зал C</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">09:00 - 10:00</td>
-              <td>Aerobics - Room A</td>
+              <td>Аэробика - Зал A</td>
               <td></td>
-              <td>Aerobics - Room A</td>
-              <td>Crossfit - Room B</td>
-              <td>Aerobics - Room A</td>
+              <td>Аэробика - Зал A</td>
+              <td>Кроссфит - Зал B</td>
+              <td>Аэробика - Зал A</td>
               <td></td>
-              <td>Spinning- Room D</td>
+              <td>Спиннинг- Зал D</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">10:00 - 11:00</td>
-              <td>Pilates - Room D</td>
-              <td>Crossfit - Room B</td>
+              <td>Пилатес - Зал D</td>
+              <td>Кроссфит - Зал B</td>
               <td></td>
-              <td>Spinning- Room D</td>
+              <td>Спиннинг- Зал D</td>
               <td></td>
-              <td>Spinning- Room D</td>
-              <td>Pilates - Room D</td>
+              <td>Спиннинг- Зал D</td>
+              <td>Пилатес - Зал D</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">11:00 - 12:00</td>
-              <td>Boxing - Room C</td>
-              <td>Pilates - Room D</td>
-              <td>Boxing - Room C</td>
+              <td>Бокс - Зал C</td>
+              <td>Пилатес - Зал D</td>
+              <td>Бокс - Зал C</td>
               <td></td>
-              <td>Pilates - Room D</td>
+              <td>Пилатес - Зал D</td>
               <td></td>
-              <td>Crossfit - Room B</td>
+              <td>Кроссфит - Зал B</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">12:00 - 13:00</td>
               <td></td>
-              <td>Crossfit - Room B</td>
+              <td>Кроссфит - Зал B</td>
               <td></td>
-              <td>Kik Boxing - Room B</td>
+              <td>Кик Боксинг - Зал B</td>
               <td></td>
-              <td>Spinning- Room D</td>
-              <td>Spinning- Room D</td>
+              <td>Спиннинг- Зал D</td>
+              <td>Спиннинг- Зал D</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">13:00 - 14:00</td>
               <td></td>
-              <td>Kik Boxing - Room B</td>
+              <td>Кик Боксинг - Зал B</td>
               <td></td>
-              <td>Crossfit - Room B</td>
+              <td>Кроссфит - Зал B</td>
               <td></td>
               <td></td>
-              <td>Kik Boxing - Room B</td>
+              <td>Кик Боксинг - Зал B</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">14:00 - 15:00</td>
-              <td>Aerobics - Room A</td>
+              <td>Аэробика - Зал A</td>
               <td></td>
-              <td>Aerobics - Room A</td>
+              <td>Аэробика - Зал A</td>
               <td></td>
-              <td>Spinning- Room D</td>
-              <td>Aerobics - Room A</td>
-              <td>Spinning- Room D</td>
+              <td>Спиннинг- Зал D</td>
+              <td>Аэробика - Зал A</td>
+              <td>Спиннинг- Зал D</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">15:00 - 16:00</td>
-              <td>Boxing - Room C</td>
+              <td>Бокс - Зал C</td>
               <td></td>
-              <td>Boxing - Room C</td>
+              <td>Бокс - Зал C</td>
               <td></td>
               <td></td>
-              <td>Crossfit - Room B</td>
-              <td>Boxing - Room C</td>
+              <td>Кроссфит - Зал B</td>
+              <td>Бокс - Зал C</td>
             </tr>
             <tr class="main-table__name">
               <td class="main-table__time">16:00 - 17:00</td>
-              <td>Pilates - Room D</td>
-              <td>Crossfit - Room B</td>
+              <td>Пилатес - Зал D</td>
+              <td>Кроссфит - Зал B</td>
               <td></td>
               <td></td>
-              <td>Spinning- Room D</td>
+              <td>Спиннинг- Зал D</td>
               <td></td>
-              <td>Spinning- Room D</td>
+              <td>Спиннинг- Зал D</td>
             </tr>
           </table>
         </div>
@@ -185,5 +186,10 @@
     @@include('_comment.html')
   </main>
   @@include('_footer.html')
+
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
