--- a/src/_trainers.html
+++ b/src/_trainers.html
@@ -68,7 +68,7 @@
           <p class="trainers__name">Жасмин Паттер</p>
           <p class="trainers__spec">Аэробика</p>
           <p class="trainers__info">
-            Заряжаю своих учников своей энергией
+            Заряжаю своих учеников энергией
           </p>
           <div class="trainers__icons">
             <svg class="trainers__icon trainers__icon-like">
@@ -95,7 +95,7 @@
           <p class="trainers__name">Джэк Гудман</p>
           <p class="trainers__spec">Кардио Фитнес</p>
           <p class="trainers__info">
-            Создаю идеальные тела для вас
+            Помогаю создать идеальное тело
           </p>
           <div class="trainers__icons">
             <svg class="trainers__icon trainers__icon-like">
